--- a/src/app/entrepreneur/entrepreneur.page.html
+++ b/src/app/entrepreneur/entrepreneur.page.html
@@ -1,9 +1,5 @@
-  <ion-header [translucent]="true">
-  	<ion-toolbar>
-  		<ion-title class="headerTitle"><img src="assets/images/logo.svg" class="logo ion-margin-end" ><span>{{'LANDINGPAGE.Title' | translate}}</span></ion-title>
-  		<app-user-avatar slot="end"></app-user-avatar>
-  	</ion-toolbar>
-  </ion-header>
+<app-header></app-header>
+
   <ion-content>
 
   	<ion-grid class="projectList">
