--- a/src/app/landing-page/landing-page.page.scss
+++ b/src/app/landing-page/landing-page.page.scss
@@ -65,6 +65,7 @@ span:after {
 	margin-left: auto;
 	margin-right: auto;
 	font-size:3em;
+
 }
 .journey{
 	background: var(--ion-color-light-tint);
@@ -123,6 +124,9 @@ span:after {
 	@media(max-width: 768px) {
 		top:-20px;
 	}
+	p{
+		font-size:1.3em;
+	}
 }
 
 .subContentGrid{
@@ -131,11 +135,16 @@ span:after {
 	margin-bottom:60px;
 	position: relative;
 	h2{
-		font-size:2em;
+		font-size: 2.5em;
 		position: absolute;
-		bottom: 16px;
+		bottom: 100px;
 		width:100%;
 		color:var(--ion-color-primary-contrast);
+	}
+	@media(max-width: 800px) {
+		h2{
+			font-size: 1.5em;
+		}
 	}
 	.subContentImg{
 		min-height: 250px;
@@ -143,18 +152,18 @@ span:after {
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
-		background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://image.freepik.com/free-photo/colleagues-giving-fist-bump_53876-64857.jpg);
+		background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://image.freepik.com/free-photo/garage-doors_23-2148098575.jpg);
 		background-repeat: no-repeat;
 		background-size: cover;
 
 	}
 	.sub2{
-		background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://image.freepik.com/free-photo/garage-doors_23-2148098575.jpg);
+		background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ),  url(https://image.freepik.com/free-photo/top-view-different-types-tools_23-2148428327.jpg);
 		background-repeat: no-repeat;
 		background-size: cover;
 	}
 	.sub3{	
-		background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://image.freepik.com/free-photo/top-view-different-types-tools_23-2148428327.jpg);
+		background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://image.freepik.com/free-photo/colleagues-giving-fist-bump_53876-64857.jpg);
 		background-repeat: no-repeat;
 		background-size: cover;
 	}
