--- a/src/app/tools/tools.page.html
+++ b/src/app/tools/tools.page.html
@@ -1,9 +1,35 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>tools</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
+		<ng-select multiple="true" 
+		class="ion-margin ngselect"
+		[items]="items"
+           bindLabel="name"
+           bindValue="id"
+            placeholder="Categories" 
 
+           [(ngModel)]="filter.categories"
+           (change)="updateList()">
+</ng-select>
+
+	<ion-card class="tool"  *ngFor="let tool of tools" [ngClass]="{'ion-hide': tool.filtered ===true} ">
+		<ion-card-content>
+			<ion-item slot="start" lines="none" >
+				<ion-avatar class="logoAvatar ion-margin-end">
+					<img class="logo" [src]="tool.imgUrl" />
+				</ion-avatar>
+				<ion-label>
+					<h1>{{tool.name}}</h1>
+					<p class="ion-text-wrap ion-text-justify">{{tool.description}}</p>
+					<h2><ion-icon name="cash-outline" class="priceIcon"></ion-icon>{{tool.price}}</h2>
+					<p>
+						<ion-chip color="primary" *ngFor="let label of tool.labels ">
+							<ion-label>{{'TOOLS.CATEGORIES.'+label.label | translate}}  </ion-label>
+						</ion-chip>
+					</p>
+				</ion-label>
+			</ion-item>
+
+		</ion-card-content>
+	</ion-card>
 </ion-content>
