--- a/src/global.scss
+++ b/src/global.scss
@@ -26,3 +26,4 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 @import "~@ng-select/ng-select/themes/default.theme.css";
+@import "~ionic4-auto-complete/auto-complete.scss";
