--- a/src/app/landing-page/login/login.component.scss
+++ b/src/app/landing-page/login/login.component.scss
@@ -6,7 +6,7 @@
 	margin-top:30px;
 }
 .socialLoginButtons{
-	max-width:250px;
+	max-width:180px;
 }
 .socialLoginButton{
 	margin-left: auto;
@@ -23,6 +23,8 @@
 	top: -10px;
 	background: var(--ion-color-primary-contrast);
 	margin: auto;
+	padding-left:12px;
+	padding-right:12px;
 }
 .form{
 
