--- a/src/app/project/executive/summary/business-canvas-element/business-canvas-element.component.scss
+++ b/src/app/project/executive/summary/business-canvas-element/business-canvas-element.component.scss
@@ -10,11 +10,11 @@
 }
 .cell{
 	min-height:248px;
-	background-color: var(--ion-color-light)
+	background-color: var(--ion-color-light);
 }
 
 .highCell{
-	height:497px;
+	height:492px;
 	background-color: var(--ion-color-light)
 }
 .smallerCell{
