--- a/src/app/project/executive/summary/popover-project-summary/popover-project-summary.component.html
+++ b/src/app/project/executive/summary/popover-project-summary/popover-project-summary.component.html
@@ -1,13 +1,43 @@
 <ion-content class="ion-padding">
 	<h2>{{'PROJECT_SUMMARY.ProjectUpdate' | translate }} {{project.summary.name}}</h2>
 	<ion-list>
-		<ion-item position="floating">
-			<ion-label class="colLabel">{{'PROJECT_SUMMARY.ProjectName' | translate }}</ion-label>
+		<ion-item >
+			<ion-label position="floating" class="colLabel">{{'PROJECT_SUMMARY.ProjectName' | translate }}</ion-label>
 			<ion-input name="name" type="text" [(ngModel)]="project.summary.name"  required></ion-input>
 		</ion-item>
-		<ion-item position="floating">
-			<ion-label class="colLabel">{{'PROJECT_SUMMARY.ProjectLogoUrl' | translate }}</ion-label>
-			<ion-input name="logoUrl" type="text" [(ngModel)]="project.summary.logoUrl"></ion-input>
+		<ion-item >
+
+			<ion-grid>
+				<ion-row>
+					<ion-col>
+						<ion-label position="floating"  class="colLabel">{{'PROJECT_SUMMARY.ProjectLogoUrl' | translate }}</ion-label>
+					</ion-col>
+					<ion-col>
+						<img  [src]="project.summary.logoUrl" *ngIf="project.summary.logoUrl !==''" class=" logo ion-margin-end" />
+						<ion-icon slot="start" name="cube-outline" *ngIf="project.summary.logoUrl ===''"></ion-icon>
+						<input type="file" ng2FileSelect [uploader]="uploader"  (onFileSelected)=	"uploadFile()"  id="files" class="ion-hide"/>
+						<ion-button color="primary"><label for="files">{{'PROJECT_SUMMARY.ChooseLogo' | translate}}</label></ion-button>
+					</ion-col>
+				</ion-row>
+			</ion-grid>	
+			
+
+		</ion-item>
+
+
+		<ion-item lines="none">
+			<ion-label color="primary" position="stacked">{{'ONBOARDINGPAGE.ProjectDomains' | translate}}</ion-label>
+		</ion-item>
+		<ion-item>
+			<ion-auto-complete [(model)]="project.domains"
+			[multi]="true"
+			[dataProvider]="providerDomains"
+			[exclude]="otherDomain"
+			[options]="domainOptions"
+			[removeButtonIcon]="'assets/icons/clear.svg'"
+			[removeButtonColor]="'dark'"
+			[useIonInput]="true"
+			></ion-auto-complete>
 		</ion-item>
 	</ion-list>
 	<ion-button color="primary" (click)="save()">{{'PROJECT_SUMMARY.ProjectSave' | translate }}</ion-button>
