--- a/src/app/project/project.page.html
+++ b/src/app/project/project.page.html
@@ -1,12 +1,5 @@
-  <ion-header [translucent]="true">
-  	<ion-toolbar>
-  		<ion-title  class="headerTitle">
-  			<img src="assets/images/logo.svg" class="logo ion-margin-end"  [routerLink]="['/entrepreneur']">
-  			<span  [routerLink]="['/entrepreneur']">{{'LANDINGPAGE.Title' | translate}}</span>
-      </ion-title>
-      <app-user-avatar slot="end"></app-user-avatar>
-    </ion-toolbar>
-  </ion-header>
+<app-header></app-header>
+
   <ion-content>
     <ion-split-pane contentId="project-content" when="(min-width: 2500px)" class="sideMenu">
      <ion-menu contentId="project-content" type="push"  >
